Removed support for controller elements in favour of entity controllers

--- a/bundles/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
@@ -1,17 +1,13 @@
 MostDslValidator.ActionNameMustBeLonger=Der Name der Aktion muss eine Länge von mindestens drei Zeichen haben.
 MostDslValidator.ActionNameMustNotBeReserved=Der Name der Aktion darf nicht Index, View, Display, Edit oder Delete sein.
-MostDslValidator.ActionNameMustNotBeReservedHooks=Der Name der Aktion darf nicht Hooks sein, da dies eine reservierte Funktion in Admin-Controllern ist.
 MostDslValidator.ActionNameMustNotBeReservedNew=Der Name der Aktion darf nicht New sein, da dies ein reservierter Begriff ist.
 MostDslValidator.ActionNameShouldBeLonger=Der Name der Aktion sollte eine Länge von mindestens vier Zeichen haben.
-MostDslValidator.ActionNeedsControllerOrEntity=Die Aktion muss einem Controller oder einer Entität zugewiesen werden.
+MostDslValidator.ActionNeedsEntity=Die Aktion muss einer Entität zugewiesen werden.
 MostDslValidator.ActionNeedsName=Die Aktion muss einen Namen haben.
 MostDslValidator.ApplicationEmailAddressIsInvalid=Der Wert für die E-Mail-Adresse der Anwendung muss eine gültige E-Mail-Adresse sein.
 MostDslValidator.ApplicationHasHighDataObjectAmount=Die Anzahl der Datenobjekte wird recht hoch. Vielleicht macht es Sinn das Modell in zwei einzelne Anwendungen aufzuteilen.
-MostDslValidator.ApplicationHasMultipleAdminControllers=Es darf nicht mehr als ein Admin-Controller existieren.
-MostDslValidator.ApplicationHasMultipleAjaxControllers=Es darf nicht mehr als ein Ajax-Controller existieren.
 MostDslValidator.ApplicationHasMultipleLeadingEntities=Die Anwendung darf nur eine als führend markierte Entität beinhalten.
 MostDslValidator.ApplicationHasMultipleSettingsContainers=Die Anwendung darf nur einen Einstellungscontainer beinhalten.
-MostDslValidator.ApplicationHasMultipleUserControllers=Es darf nicht mehr als ein User-Controller existieren.
 MostDslValidator.ApplicationHasNoLeadingEntity=Die Anwendung benötigt eine als führend markierte Entität.
 MostDslValidator.ApplicationImportMinVersionIsInvalid=Die minimale Version muss dem Muster x.y.z entsprechen.
 MostDslValidator.ApplicationImportMinVersionMustNotBeGreaterThanMaxVersion=Die minimale Version darf nicht größer sein als die maximale Version.
@@ -22,9 +18,7 @@ MostDslValidator.ApplicationImportNeedsName=Du musst den Namen der importierten 
 MostDslValidator.ApplicationImportNeedsUri=Du musst die URI der Modelldatei der importierten Anwendung eingeben.
 MostDslValidator.ApplicationNameMustBeLonger=Der Name der Anwendung muss eine Länge von mindestens vier Zeichen haben.
 MostDslValidator.ApplicationNameMustStartWithCapital=Der Name der Anwendung muss mit einem Großbuchstaben beginnen, bitte benenne sie um in 
-MostDslValidator.ApplicationNeedsAdminController=Du musst einen Admin-Controller haben, für die Hook-Subscriber-Funktionalität.
 MostDslValidator.ApplicationNeedsAuthor=Die Anwendung muss einen Autor haben.
-MostDslValidator.ApplicationNeedsController=Die Anwendung muss mindestens einen Controller enthalten.
 MostDslValidator.ApplicationNeedsEmailAddress=Die Anwendung muss eine E-Mail-Adresse haben.
 MostDslValidator.ApplicationNeedsEntity=Die Anwendung muss mindestens eine Entität enthalten.
 MostDslValidator.ApplicationNeedsName=Die Anwendung muss einen Namen haben.
@@ -39,28 +33,7 @@ MostDslValidator.ApplicationVendorIsInvalidIdentifier=Der Anbieter muss ein gült
 MostDslValidator.ApplicationVendorMustStartWithCapital=Der Anbieter der Anwendung muss mit einem Großbuchstaben beginnen, bitte benenne ihn um in 
 MostDslValidator.ApplicationVersionIsInvalid=Die Version der Anwendung muss dem Muster x.y.z entsprechen.
 MostDslValidator.CalculatedFieldNeedsOperand=Das Feld muss sich auf mindestens ein abgeleitetes Feld beziehen.
-MostDslValidator.ControllerActionsMustBeUnique=Die Namen von eigenen Aktionen in einem Controller müssen eindeutig sein.
-MostDslValidator.ControllerAjaxMustNotHaveDeleteAction=Dieser Controller darf keine Delete-Aktion enthalten. Bitte entferne sie.
-MostDslValidator.ControllerContainerNeedsAjaxController=Bitte erstelle einen Ajax-Controller mit einer beliebigen Aktion, wie Index, da er zur einwandfreien Verarbeitung Deines Modells notwendig ist.
-MostDslValidator.ControllerContainerNeedsController=Der Controller-Container muss mindestens einen Controller enthalten.
-MostDslValidator.ControllerMustNotHaveMultipleDeleteActions=Es darf nicht mehr als eine Delete-Aktion in einem Controller geben.
-MostDslValidator.ControllerMustNotHaveMultipleDisplayActions=Es darf nicht mehr als eine Display-Aktion in einem Controller geben.
-MostDslValidator.ControllerMustNotHaveMultipleEditActions=Es darf nicht mehr als eine Edit-Aktion in einem Controller geben.
-MostDslValidator.ControllerMustNotHaveMultipleIndexActions=Es darf nicht mehr als eine Index-Aktion in einem Controller geben.
-MostDslValidator.ControllerMustNotHaveMultipleViewActions=Es darf nicht mehr als eine View-Aktion in einem Controller geben.
-MostDslValidator.ControllerMustNotContainViewActions=Es darf keine View-Aktion in einem (Admin | User | Custom) Controller geben.
-MostDslValidator.ControllerMustNotContainDisplayActions=Es darf keine Display-Aktion in einem (Admin | User | Custom) Controller geben.
-MostDslValidator.ControllerMustNotContainEditActions=Es darf keine Edit-Aktion in einem (Admin | User | Custom) Controller geben.
-MostDslValidator.ControllerMustNotContainDeleteActions=Es darf keine Delete-Aktion in einem (Admin | User | Custom) Controller geben.
-MostDslValidator.ControllerNameMustBeLonger=Der Name des Controllers muss eine Länge von mindestens drei Zeichen haben.
-MostDslValidator.ControllerNameMustNotBeReserved=Der Name des Controllers darf nicht sein 
-MostDslValidator.ControllerNameMustNotContainUnderscores=Der Name des Controllers darf keine Unterstriche enthalten, bitte umbenennen in 
-MostDslValidator.ControllerNameShouldBeLonger=Der Name des Controllers sollte eine Länge von mindestens vier Zeichen haben.
-MostDslValidator.ControllerNamesMustBeUnique=Die Namen der Controller müssen eindeutig sein.
-MostDslValidator.ControllerNeedsAction=Jeder Controller muss mindestens eine Aktion enthalten.
-MostDslValidator.ControllerNeedsApplication=Der Controller muss einer Anwendung zugewiesen werden.
-MostDslValidator.ControllerNeedsName=Der Controller muss einen Namen haben.
-MostDslValidator.CustomControllersMustBeUnique=Die Namen der eigenen Controller müssen eindeutig sein.
+MostDslValidator.ControllerDeprecated=Controller-Elemente werden nicht mehr unterstützt. Verwende statt dessen Entitäten-Elemente als Controller. Bitte entferne dieses Element von Deinem Modell.
 MostDslValidator.DataObjectDoesNotNeedIdFields=Entferne ID-Felder... Du brauchst sie nicht ;-) außer vielleicht Du willst Composite Primary Keys erstellen (Datenobjekt: 
 MostDslValidator.DataObjectDoesNotNeedPrimaryKeyField=Du brauchst ein Feld nicht als primär zu markieren, dies wird automatisch erledigt - außer vielleicht Du willst Composite Primary Keys erstellen.
 MostDslValidator.DataObjectFieldsMustNotBeTooLarge=Die Länge aller Felder des Datenobjekts darf nicht größer als 21845 sein.
