--- a/bundles/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/ui/quickfix/layer/messages_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/ui/quickfix/layer/messages_de.properties
@@ -3,7 +3,6 @@ MostDslQuickfixProvider.AddABooleanFieldToTheEntity=Ein Boolean-Feld zum Datenob
 MostDslQuickfixProvider.AddABooleanVariableTo=Eine Boolean-Variable zu '{0}' hinzufügen
 MostDslQuickfixProvider.AddACalculatedFieldToTheEntity=Ein berechnetes Feld zum Datenobjekt '{0}' hinzufügen
 MostDslQuickfixProvider.AddACustomActionToTheController=Eine eigene Aktion zum Controller '{0}' hinzufügen
-MostDslQuickfixProvider.AddACustomControllerToTheContainer=Einen eigenen Controller zum Container hinzufügen
 MostDslQuickfixProvider.AddADateFieldToTheEntity=Ein Datumsfeld zum Datenobjekt '{0}' hinzufügen
 MostDslQuickfixProvider.AddADatetimeFieldForStoringTheVersion=Ein Zeitstempelfeld zur Speicherung der Version hinzufügen
 MostDslQuickfixProvider.AddADatetimeFieldToTheEntity=Ein Zeitstempelfeld zum Datenobjekt '{0}' hinzufügen
@@ -11,22 +10,17 @@ MostDslQuickfixProvider.AddADecimalFieldToTheEntity=Ein Dezimalfeld zum Datenobj
 MostDslQuickfixProvider.AddADefaultEntityOrUseTheFirstOneIfExisting=Eine Standard-Entität hinzufügen oder die erste existierende verwenden
 MostDslQuickfixProvider.AddADeleteActionToTheController=Eine Delete-Aktion zum Controller '{0}' hinzufügen
 MostDslQuickfixProvider.AddADisplayActionToTheController=Eine Display-Aktion zum Controller '{0}' hinzufügen
-MostDslQuickfixProvider.AddAdminController=Admin-Controller hinzufügen
 MostDslQuickfixProvider.AddADummyNameForTheImportedApplication=Einen Dummy-Namen für die importierte Anwendung hinzufügen
 MostDslQuickfixProvider.AddADummyUriExplainingTheFormat=Eine Dummy-URI zur Erklärung des Formates hinzufügen
 MostDslQuickfixProvider.AddAFilePathVariableTo=Eine Dateipfad-Variable zu '{0}' hinzufügen
 MostDslQuickfixProvider.AddAFloatFieldToTheEntity=Ein Fließkomma-Feld zum Datenobjekt '{0}' hinzufügen
-MostDslQuickfixProvider.AddAjaxController=Ajax-Controller hinzufügen
 MostDslQuickfixProvider.AddAListFieldToTheEntity=Ein Listenfeld zum Datenobjekt '{0}' hinzufügen
 MostDslQuickfixProvider.AddAListVariableTo=Eine Listen-Variable zu '{0}' hinzufügen
-MostDslQuickfixProvider.AddAnAdminControllerToTheContainer=Einen Admin-Controller zum Container hinzufügen
-MostDslQuickfixProvider.AddAnAjaxControllerToTheContainer=Einen Ajax-Controller zum Container hinzufügen
 MostDslQuickfixProvider.AddAnEntityTo=Eine Entität zu '{0}' hinzufügen
 MostDslQuickfixProvider.AddAnIndexActionToTheController=Eine Index-Aktion zum Controller '{0}' hinzufügen
 MostDslQuickfixProvider.AddANameForThisAction=Einen Namen für diese Aktion hinzufügen
 MostDslQuickfixProvider.AddANameForThisApplication=Einen Namen für diese Anwendung hinzufügen
 MostDslQuickfixProvider.AddANameForThisContainer=Einen Namen für diesen Container hinzufügen
-MostDslQuickfixProvider.AddANameForThisController=Einen Namen für diesen Controller hinzufügen
 MostDslQuickfixProvider.AddANameForThisDataObject=Einen Namen für dieses Datenobjekt hinzufügen
 MostDslQuickfixProvider.AddANameForThisField=Einen Namen für dieses Feld hinzufügen
 MostDslQuickfixProvider.AddANameForThisIndex=Einen Namen für diesen Index hinzufügen
@@ -50,7 +44,6 @@ MostDslQuickfixProvider.AddAnIntegerVariableTo=Eine Integer-Variable zu '{0}' hi
 MostDslQuickfixProvider.AddAnObjectFieldToTheEntity=Ein Objektfeld zum Datenobjekt '{0}' hinzufügen
 MostDslQuickfixProvider.AddAnUploadFieldToTheEntity=Ein Uploadfeld zum Datenobjekt '{0}' hinzufügen
 MostDslQuickfixProvider.AddAnUrlFieldToTheEntity=Ein URL-Feld zum Datenobjekt '{0}' hinzufügen
-MostDslQuickfixProvider.AddAnUserControllerToTheContainer=Einen User-Controller zum Container hinzufügen
 MostDslQuickfixProvider.AddAPluralNameForThisEntity=Einen Mehrfachnamen für diese Entität hinzufügen
 MostDslQuickfixProvider.AddAPrefixForThisApplication=Ein Präfix für diese Anwendung hinzufügen
 MostDslQuickfixProvider.AddArrayField=Ein Array-Feld hinzufügen
@@ -66,7 +59,6 @@ MostDslQuickfixProvider.AddBooleanField=Boolean-Feld hinzufügen
 MostDslQuickfixProvider.AddBoolVar=Boolean-Var hinzufügen
 MostDslQuickfixProvider.AddCalculatedField=Berechnetes Feld hinzufügen
 MostDslQuickfixProvider.AddCustomAction=Eigene Aktion hinzufügen
-MostDslQuickfixProvider.AddCustomController=Eigenen Controller hinzufügen
 MostDslQuickfixProvider.AddDateField=Datumsfeld hinzufügen
 MostDslQuickfixProvider.AddDatetimeField=Zeitstempel-Feld hinzufügen
 MostDslQuickfixProvider.AddDatetimeVersionField=Zeitstempel-Versionsfeld hinzufügen
@@ -108,7 +100,6 @@ MostDslQuickfixProvider.AddTextVar=Text-Var hinzufügen
 MostDslQuickfixProvider.AddTimeField=Zeitfeld hinzufügen
 MostDslQuickfixProvider.AddUploadField=Upload-Feld hinzufügen
 MostDslQuickfixProvider.AddUrlField=URL-Feld hinzufügen
-MostDslQuickfixProvider.AddUserController=User-Controller hinzufügen
 MostDslQuickfixProvider.AddUserField=Benutzer-Feld hinzufügen
 MostDslQuickfixProvider.AddVendor=Anbieter hinzufügen
 MostDslQuickfixProvider.AddVersion=Version hinzufügen
@@ -140,22 +131,16 @@ MostDslQuickfixProvider.CorrectDefaultValue=Standardwert korrigieren
 MostDslQuickfixProvider.CorrectName=Name korrigieren
 MostDslQuickfixProvider.CorrectPrefix=Präfix korrigieren
 MostDslQuickfixProvider.CorrectVendor=Anbieter korrigieren
-MostDslQuickfixProvider.CreateACustomControllerAndAssignTheActionToIt=Einen eigenen Controller erstellen und die Aktion zuordnen
-MostDslQuickfixProvider.CreateAdminController=Admin-Controller erstellen
-MostDslQuickfixProvider.CreateAnAdminControllerAndAssignTheActionToIt=Einen Admin-Controller erstellen und die Aktion zuordnen
 MostDslQuickfixProvider.CreateAnApplicationAndAssignTheDataObjectToIt=Eine Anwendung erstellen und das Datenobjekt zuordnen
 MostDslQuickfixProvider.CreateAnApplicationAndAssignTheRelationshipToIt=Eine Anwendung erstellen und die Beziehung zuordnen
 MostDslQuickfixProvider.CreateAnEntityAndAssignTheActionToIt=Eine Entität erstellen und die Aktion zuordnen
 MostDslQuickfixProvider.CreateAnEntityAndAssignTheFieldToIt=Eine Entität erstellen und das Feld zuordnen
 MostDslQuickfixProvider.CreateAnEntityAndAssignTheIndexToIt=Eine Entität erstellen und den Index zuordnen
 MostDslQuickfixProvider.CreateAnEntityIndexAndAssignTheIndexItemToIt=Einen Entitäts-Index erstellen und den Index-Eintrag zuordnen
-MostDslQuickfixProvider.CreateAnUserControllerAndAssignTheActionToIt=Einen User-Controller erstellen und die Aktion zuordnen
 MostDslQuickfixProvider.CreateApplication=Anwendung erstellen
 MostDslQuickfixProvider.CreateAVarContainerAndAssignTheVariableWithIt=Einen Var-Container erstellen und die Variable zuordnen
-MostDslQuickfixProvider.CreateCustomController=Eigenen Controller erstellen
 MostDslQuickfixProvider.CreateEntity=Entität erstellen
 MostDslQuickfixProvider.CreateIndex=Index erstellen
-MostDslQuickfixProvider.CreateUserController=User-Controller erstellen
 MostDslQuickfixProvider.CreateVarContainer=Var-Container erstellen
 MostDslQuickfixProvider.DecreaseLengthOfIntegerFieldTo=Länge des Integer-Feldes auf 18 reduzieren
 MostDslQuickfixProvider.DecreaseLengthOfStringFieldTo255=Länge des String-Feldes auf 255 reduzieren
@@ -163,6 +148,8 @@ MostDslQuickfixProvider.DecreaseMinimumLengthToEqualLength=Minimale Länge reduzi
 MostDslQuickfixProvider.DecreaseMinimumValueToEqualMaximumValue=Minimalen Wert reduzieren und gleich dem maximalen Wert setzen
 MostDslQuickfixProvider.DecreaseMinimumVersionToEqualMaximumVersion=Minimale Version reduzieren und gleich der maximalen Version setzen
 MostDslQuickfixProvider.DecreaseScaleToBecomeLowerThanLength=Scale reduzieren und auf niedrigeren Wert als die Länge setzen
+MostDslQuickfixProvider.DeleteController=Controller löschen
+MostDslQuickfixProvider.DeleteControllerDescription=Das Controller-Element inklusive der Aktionen löschen
 MostDslQuickfixProvider.DisableScribitePlugins=Scribite Plugins deaktivieren
 MostDslQuickfixProvider.DisableScribitePluginsDesc=Generierung von Plugins für mehrere Scribite-Editoren deaktivieren
 MostDslQuickfixProvider.DropPrimaryKeyFlags=Primärschlüssel-Flags zurücksetzen
@@ -184,7 +171,6 @@ MostDslQuickfixProvider.IncreaseFieldLengthTo5=Feldlänge auf 5 erhöhen
 MostDslQuickfixProvider.IncreaseFieldLengthTo7=Feldlänge auf 7 erhöhen
 MostDslQuickfixProvider.IncreaseLengthOfFieldToASensitiveMinimumValue=Länge des Feldes auf einen vernünftigen Minimalwert erhöhen
 MostDslQuickfixProvider.IncreaseLengthOfNameByAppendingTheWordAction=Länge des Namens erhöhen durch Anhängen des Wortes Action
-MostDslQuickfixProvider.IncreaseLengthOfNameByAppendingTheWordController=Länge des Namens erhöhen durch Anhängen des Wortes Controller
 MostDslQuickfixProvider.IncreaseLengthOfNameByAppendingTheWordField=Länge des Namens erhöhen durch Anhängen des Wortes Field
 MostDslQuickfixProvider.IncreaseLengthOfNameByAppendingTheWordIndex=Länge des Namens erhöhen durch Anhängen des Wortes Index
 MostDslQuickfixProvider.IncreaseLengthOfNameByAppendingTheWordManager=Länge des Namens erhöhen durch Anhängen des Wortes Manager
@@ -229,7 +215,6 @@ MostDslQuickfixProvider.RemoveCreditCardFlag=Das creditCard-Flag entfernen
 MostDslQuickfixProvider.RemoveCurrencyFlag=Das currency-Flag entfernen
 MostDslQuickfixProvider.RemoveTheDbName=Den DB Namen entfernen
 MostDslQuickfixProvider.RemoveEnhancedWorkflow=Den erweiterten Workflow entfernen
-MostDslQuickfixProvider.RemoveDeleteActionFromTheController=Die Delete-Aktion vom Controller '{0}' entfernen
 MostDslQuickfixProvider.RemoveGeographicalFlag=Das geographical-Flag entfernen
 MostDslQuickfixProvider.RemoveIbanFlag=Das iban-Flag entfernen
 MostDslQuickfixProvider.RemoveIpAddressSetting=IP-Adresse entfernen
@@ -261,10 +246,6 @@ MostDslQuickfixProvider.RemoveTimezoneFlag=timezone-Flag entfernen
 MostDslQuickfixProvider.RemoveUniqueFlag=Das unique-Flag entfernen
 MostDslQuickfixProvider.RemoveUuidFlag=Das UUID-Flag entfernen
 MostDslQuickfixProvider.RemoveVersionFlag=Das version-Flag entfernen
-MostDslQuickfixProvider.RemoveTheViewAction=Die View-Aktion entfernen
-MostDslQuickfixProvider.RemoveTheDisplayAction=Die Display-Aktion entfernen
-MostDslQuickfixProvider.RemoveTheEditAction=Die Edit-Aktion entfernen
-MostDslQuickfixProvider.RemoveTheDeleteAction=Die Delete-Aktion entfernen
 MostDslQuickfixProvider.RenameTheElementsUsingACounter=Die Elemente mit einem Zähler umbenennen
 MostDslQuickfixProvider.RenameThePositionsUsingACounter=Die Positionen mit einem Zähler umbenennen
 MostDslQuickfixProvider.RenameWithCounter=Mit Zähler umbenennen
@@ -274,6 +255,8 @@ MostDslQuickfixProvider.RepairNameByRemovingAllUnderscoresAndConvertingToMixedCa
 MostDslQuickfixProvider.RepairNameByRemovingForbiddenCharacters=Namen durch Entfernen nicht erlaubter Zeichen reparieren
 MostDslQuickfixProvider.RepairNameByUsingASimilarNonReservedOne=Namen durch Verwendung eines ähnlichen, nicht reservierten reparieren
 MostDslQuickfixProvider.RepairVendorByRemovingForbiddenCharacters=Anbieter durch Entfernen nicht erlaubter Zeichen reparieren
+MostDslQuickfixProvider.ReplaceByEntity=Durch Entität ersetzen
+MostDslQuickfixProvider.ReplaceByEntityDescription=Ersetze diesen Controller durch eine Entität und verschiebe die Aktionen dahin
 MostDslQuickfixProvider.ReplaceByExample=Durch Beispiel ersetzen
 MostDslQuickfixProvider.ReplaceByInteger=Durch Integer ersetzen
 MostDslQuickfixProvider.ReplaceTheDatetimeFieldByAnEquallyNamedIntegerField=Das Zeitstempelfeld '{0}' durch ein gleichnamiges Ganzzahl-Feld ersetzen
@@ -361,7 +344,6 @@ MostDslQuickfixProvider.UseAsUuid=Als UUID verwenden
 MostDslQuickfixProvider.UseFirst=Den ersten verwenden
 MostDslQuickfixProvider.UseFirstOne=Den ersten verwenden
 MostDslQuickfixProvider.UseTheFirstActionRemoveTheOthers=Die erste Aktion verwenden, die anderen entfernen
-MostDslQuickfixProvider.UseTheFirstContainerRemoveTheOthersAfterMovingAllContentIntoTheFirstOne=Den ersten Container verwenden, die anderen entfernen nach Verschieben aller Inhalte in den ersten
 MostDslQuickfixProvider.UseTheFirstDefaultItemUnsetTheDefaultFlagForAllOtherOnes=Den ersten Standardeintrag verwenden, das Standard-Flag für alle anderen entfernen
 MostDslQuickfixProvider.UseTheFirstEntityAsTheLeadingOne=Die erste Entität als führende verwenden
 MostDslQuickfixProvider.UseTheFirstLeadingEntityAsTheLeadingOne=Die erste führende Entität als führende verwenden
