--- a/bundles/de.guite.modulestudio.sirius.design.nl1.de/OSGI-INF/l10n/bundle_de.properties
+++ b/bundles/de.guite.modulestudio.sirius.design.nl1.de/OSGI-INF/l10n/bundle_de.properties
@@ -111,19 +111,15 @@ relationOneToMany=Eins zu viele Beziehung
 relationManyToOne=Viele zu eins Beziehung
 relationManyToMany=Viele zu viele Beziehung
 relationInheritance=Vererbung
-elemController=Controller
-elemControllerAction=Controller Aktion
+elemAction=Aktion
 elemEntityActions=Entität Aktionen
 elemEntityAction=Entität Aktion
-elemAdmin=Admin
-elemUser=Benutzer
-elemAjax=Ajax
-elemCustom=Eigene
 elemIndex=Übersicht
 elemView=Listen
 elemDisplay=Detail
 elemEdit=Bearbeiten
 elemDelete=Löschen
+elemCustom=Eigene
 elemVarContainer=Var-Container
 elemVariable=Variable
 elemFilePath=Dateipfad
