representation names can not be translated yet

--- a/bundles/de.guite.modulestudio.sirius.design.nl1.de/OSGI-INF/l10n/bundle_de.properties
+++ b/bundles/de.guite.modulestudio.sirius.design.nl1.de/OSGI-INF/l10n/bundle_de.properties
@@ -4,12 +4,12 @@ providerName = Guite - Guckelsberger Informationstechnik
 fragmentName = ModuleStudio Designer Locales Deutsch
 
 viewpointMostApp=ModuleStudio-Anwendung
-repEntitiesDiagram=Entitäten-Diagramm
-repEntitiesDiagramDoc=Diagramm-basierte Anwendungsbeschreibung.
-repVariablesTable=Variablen-Tabelle
-repVariablesTableDoc=Tabelleneditor für Variablen.
-repEntitiesTable=Entitäten-Tabelle
-repEntitiesTableDoc=Tabelleneditor für Entitäten.
+#repEntitiesDiagram=Entitäten-Diagramm
+#repEntitiesDiagramDoc=Diagramm-basierte Anwendungsbeschreibung.
+#repVariablesTable=Variablen-Tabelle
+#repVariablesTableDoc=Tabelleneditor für Variablen.
+#repEntitiesTable=Entitäten-Tabelle
+#repEntitiesTableDoc=Tabelleneditor für Entitäten.
 
 #filterCategorisable=Zeige nur Entitäten mit Kategorien
 #filterWithoutFields=Zeige nur Entitäten ohne Felder
