added support for Blameable extension

--- a/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
@@ -354,6 +354,12 @@ _UI_StringField_issn_feature = Issn
 _UI_StringField_issn_description = Erlaubt die Einstellung, ob dieses Feld eine ISSN (Internationale Standardnummer) repräsentiert.
 _UI_StringField_ipAddress_feature = IP-Adresse
 _UI_StringField_ipAddress_description = Erlaubt die Einstellung, ob dieses Feld eine IP-Adresse repräsentiert.
+_UI_StringField_ipTraceable_feature = IP-Verfolgung
+_UI_StringField_ipTraceable_description = IP-Verfolgung Trigger-Art.
+_UI_StringField_ipTraceableChangeTriggerField_feature = IP-Verfolgung Change Trigger Feld
+_UI_StringField_ipTraceableChangeTriggerField_description = IP-Verfolgung Change Trigger Feldname.
+_UI_StringField_ipTraceableChangeTriggerValue_feature = IP-Verfolgung Change Trigger Wert
+_UI_StringField_ipTraceableChangeTriggerValue_description = IP-Verfolgung Change Trigger Feldwert.
 _UI_StringField_password_feature = Passwort
 _UI_StringField_password_description = Ob dieses Feld ein Kennwort repräsentiert oder nicht.
 _UI_StringField_timezone_feature = Zeitzone
@@ -362,6 +368,12 @@ _UI_StringField_uuid_feature = UUID
 _UI_StringField_uuid_description = Ob dieses Feld eine UUID repräsentiert oder nicht.
 _UI_TextField_length_feature = Länge
 _UI_TextField_length_description = Die Länge dieses Feldes.
+_UI_UserField_blameable_feature = Blameable
+_UI_UserField_blameable_description = Blameable Trigger-Art.
+_UI_UserField_blameableChangeTriggerField_feature = Blameable Change Trigger Feld
+_UI_UserField_blameableChangeTriggerField_description = Blameable Change Trigger Feldname.
+_UI_UserField_blameableChangeTriggerValue_feature = Blameable Change Trigger Wert
+_UI_UserField_blameableChangeTriggerValue_description = Blameable Change Trigger Feldwert.
 _UI_UserField_onAccountDeletion_feature = Bei Account-Löschung
 _UI_UserField_onAccountDeletion_description = Kontrolliert, wie eine App das Feld verändern soll, wenn Benutzer gelöscht werden.
 _UI_EmailField_length_feature = Länge
@@ -611,6 +623,10 @@ _UI_IpAddressScope_ALL_NO_RES_literal = ALL_NO_RES
 _UI_IpAddressScope_IP4_PUBLIC_literal = IP4_PUBLIC
 _UI_IpAddressScope_IP6_PUBLIC_literal = IP6_PUBLIC
 _UI_IpAddressScope_ALL_PUBLIC_literal = ALL_PUBLIC
+_UI_EntityIpTraceableType_NONE_literal = NONE
+_UI_EntityIpTraceableType_UPDATE_literal = UPDATE
+_UI_EntityIpTraceableType_CREATE_literal = CREATE
+_UI_EntityIpTraceableType_CHANGE_literal = CHANGE
 _UI_UploadNamingScheme_ORIGINALWITHCOUNTER_literal = ORIGINALWITHCOUNTER
 _UI_UploadNamingScheme_RANDOMCHECKSUM_literal = RANDOMCHECKSUM
 _UI_UploadNamingScheme_FIELDNAMEWITHCOUNTER_literal = FIELDNAMEWITHCOUNTER
