--- a/bundles/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
@@ -60,6 +60,8 @@ MostDslValidator.EntityAttributableMustNotContainReserved=Entitäten mit Attribut
 MostDslValidator.EntityAttributableMustNotContainReservedField=Daher dürfen Deine Felder diesen Namen nicht enthalten.
 MostDslValidator.EntityAttributableMustNotContainReservedSource=Daher darf Deine Referenz diesen Quell-Alias nicht enthalten.
 MostDslValidator.EntityAttributableMustNotContainReservedTarget=Daher darf Deine Referenz diesen Ziel-Alias nicht enthalten.
+MostDslValidator.EntityBlameableNeedsChangeTriggerReference=Das Blameable Change Trigger Feld muss den Namen eines Feldes oder einer Beziehung (property.field) referenzieren.
+MostDslValidator.EntityBlameableNeedsValidChangeTriggerReference=Das Blameabl Change Trigger Feld muss workflowState, den Namen eines Feldes oder einer eingehenden Beziehung (property.field) referenzieren.
 MostDslValidator.EntityCategorisableMustNotContainReserved=Entitäten mit Kategorien haben ein zusätzliches Feld zur Referenzierung derselben
 MostDslValidator.EntityCategorisableMustNotContainReservedField=Daher dürfen Deine Felder diesen Namen nicht enthalten.
 MostDslValidator.EntityCategorisableMustNotContainReservedSource=Daher darf Deine Referenz diesen Quell-Alias nicht enthalten.
@@ -168,6 +170,8 @@ MostDslValidator.EntityIndexNeedsEntity=Der Index muss einer Entität zugewiesen 
 MostDslValidator.EntityIndexNeedsItem=Jeder Index muss mindestens einen Eintrag haben, der ein Feld der Entität referenziert.
 MostDslValidator.EntityIndexNeedsName=Jeder Index muss einen Namen haben.
 MostDslValidator.EntityInheritanceRelationshipMustNotBeSelfRelation=Selbstbeziehungen sind nicht erlaubt für Vererbungsbeziehungen.
+MostDslValidator.EntityIpTraceableNeedsChangeTriggerReference=Das IpTraceable Change Trigger Feld muss den Namen eines Feldes oder einer Beziehung (property.field) referenzieren.
+MostDslValidator.EntityIpTraceableNeedsValidChangeTriggerReference=Das IpTraceable Change Trigger Feld muss workflowState, den Namen eines Feldes oder einer eingehenden Beziehung (property.field) referenzieren.
 MostDslValidator.EntityLoggableNeedsVersionField=Entitäten mit Loggable benötigen ein Feld mit dem aktivierten Attribut version.
 MostDslValidator.EntityMetaDataIsDeprecated=Die Metadaten-Erweiterung ist veraltet. Falls benötigt, erstelle eine normale Entität statt dessen.
 MostDslValidator.EntityMetaDataMustNotContainReserved=Entitäten mit Meta-Daten haben ein zusätzliches Feld zur Referenzierung derselben
