added missing properties

--- a/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
@@ -334,6 +334,8 @@ _UI_AbstractStringField_sluggablePosition_feature = Sluggable-Position
 _UI_AbstractStringField_sluggablePosition_description = Position dieses Feldes im generierten Slug. Ein Wert von 0 steht für keine Berücksichtigung im Slug.
 _UI_StringField_length_feature = Länge
 _UI_StringField_length_description = Die Länge dieses Feldes.
+_UI_StringField_bic_feature = BIC
+_UI_StringField_bic_description = Ob dieses Feld einen BIC (Business Identifier Code) repräsentiert oder nicht.
 _UI_StringField_country_feature = Land
 _UI_StringField_country_description = Ob dieses Feld einen Ländercode repräsentiert oder nicht.
 _UI_StringField_creditCard_feature = Kreditkarte
@@ -627,6 +629,10 @@ _UI_EntityIpTraceableType_NONE_literal = NONE
 _UI_EntityIpTraceableType_UPDATE_literal = UPDATE
 _UI_EntityIpTraceableType_CREATE_literal = CREATE
 _UI_EntityIpTraceableType_CHANGE_literal = CHANGE
+_UI_EntityBlameableType_NONE_literal = NONE
+_UI_EntityBlameableType_UPDATE_literal = UPDATE
+_UI_EntityBlameableType_CREATE_literal = CREATE
+_UI_EntityBlameableType_CHANGE_literal = CHANGE
 _UI_UploadNamingScheme_ORIGINALWITHCOUNTER_literal = ORIGINALWITHCOUNTER
 _UI_UploadNamingScheme_RANDOMCHECKSUM_literal = RANDOMCHECKSUM
 _UI_UploadNamingScheme_FIELDNAMEWITHCOUNTER_literal = FIELDNAMEWITHCOUNTER
