externalised tab descriptor filter messages

--- a/bundles/de.guite.modulestudio.ui.nl1.de/plugin_de.properties
+++ b/bundles/de.guite.modulestudio.ui.nl1.de/plugin_de.properties
@@ -101,3 +101,5 @@ help.search.docs.twig.desc=Die Dokumentation von Twig durchsuchen
 
 unwelcome.activity.name=unwillkommen
 unwelcome.activity.description=unwillkommene Contributions
+eef.tab.descriptor.description=Stellt EEF Tab Filter bereit
+eef.tab.descriptor.label=ModuleStudio EEF Tab Descriptor Filter
