--- a/bundles/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
@@ -255,7 +255,7 @@ MostDslValidator.RelationshipJoinSourceAliasesMustNotBeNamedLikeField=Die Querll
 MostDslValidator.RelationshipJoinSourceAliasNameMustBeLonger=Das Quell-Alias der Beziehung muss eine Länge von mindestens zwei Zeichen haben.
 MostDslValidator.RelationshipJoinSourceAliasNameShouldBeLonger=Das Quell-Alias der Beziehung sollte eine Länge von mindestens vier Zeichen haben.
 MostDslValidator.RelationshipJoinTargetAliasesMustBeUnique=Die Ziel-Aliase der Beziehung müssen eindeutig sein für alle ausgehenden Beziehungen einer Entität.
-MostDslValidator.RelationshipJoinTargetAliasesMustNotBeNamedLikeField=Die Zial-Aliase der Beziehung dürfen nicht so heißen wie ein Feld der Quell-Entität.
+MostDslValidator.RelationshipJoinTargetAliasesMustNotBeNamedLikeField=Die Ziel-Aliase der Beziehung dürfen nicht so heißen wie ein Feld der Quell-Entität.
 MostDslValidator.RelationshipJoinTargetAliasNameMustBeLonger=Das Ziel-Alias der Beziehung muss eine Länge von mindestens zwei Zeichen haben.
 MostDslValidator.RelationshipJoinTargetAliasNameShouldBeLonger=Das Ziel-Alias der Beziehung sollte eine Länge von mindestens vier Zeichen haben.
 MostDslValidator.RelationshipNeedsApplication=Die Beziehung muss einer Anwendung zugewiesen werden.
