--- a/bundles/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
@@ -14,7 +14,7 @@ MostDslValidator.ApplicationImportMinVersionMustNotBeGreaterThanMaxVersion=Die m
 MostDslValidator.ApplicationImportMaxVersionIsInvalid=Die maximale Version muss dem Muster x.y.z entsprechen.
 MostDslValidator.ApplicationImportNeedsMaxVersion=Bitte gebe die maximale Version für die Abhängigkeit an.
 MostDslValidator.ApplicationImportNeedsMinVersion=Bitte gebe die minimale Version für die Abhängigkeit an.
-MostDslValidator.ApplicationImportNeedsName=Du musst den Namen der importierten Anwendung eingeben. 
+MostDslValidator.ApplicationImportNeedsName=Du musst den Namen der importierten Anwendung eingeben.
 MostDslValidator.ApplicationImportNeedsUri=Du musst die URI der Modelldatei der importierten Anwendung eingeben.
 MostDslValidator.ApplicationNameMustBeLonger=Der Name der Anwendung muss eine Länge von mindestens vier Zeichen haben.
 MostDslValidator.ApplicationNameMustStartWithCapital=Der Name der Anwendung muss mit einem Großbuchstaben beginnen, bitte benenne sie um in 
@@ -142,7 +142,7 @@ MostDslValidator.EntityFieldUploadNeedsValidFileExtensions=Das Attribut allowedE
 MostDslValidator.EntityFieldUrlNeedsValidDefaultValue=Der Standardwert für ein URL-Feld muss eine gültige URL sein.
 MostDslValidator.EntityFieldVersionCanNotBePrimaryKey=Das version-Attribut kann nicht mit einem Primärschlüssel kombiniert werden.
 MostDslValidator.EntityFieldVersionIntegerBetterThanDateTime=Die Verwendung eines Integer-Feldes wäre für das Versions-Feld zu bevorzugen, da Datetime-Felder potenziell bei High-Traffic-Seiten zu Konflikten führen können, abhängig von der Auflösung des Zeitstempels in der Datenbank.
-MostDslValidator.EntityFieldVersionNeedsOptimisticLocking=Entitäten mit einem Versions-Feld sollten optimistisches Locking verwenden.
+MostDslValidator.EntityFieldVersionNeedsOptimisticLocking=Entitäten mit einem Versions-Feld müssen optimistisches Locking verwenden.
 MostDslValidator.EntityFieldVersionOnlyOneField=Nur ein Feld pro Entität kann die Version speichern.
 MostDslValidator.EntityGeographicalMustNotContainReserved=Entitäten mit Geographical-Erweiterung haben zusätzliche Felder
 MostDslValidator.EntityGeographicalMustNotContainReservedField=Daher dürfen Deine Felder diese Namen nicht enthalten.
