updated validation messages

--- a/bundles/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
@@ -33,8 +33,8 @@ MostDslValidator.ApplicationVendorIsInvalidIdentifier=Der Anbieter muss ein gült
 MostDslValidator.ApplicationVendorMustStartWithCapital=Der Anbieter der Anwendung muss mit einem Großbuchstaben beginnen, bitte benenne ihn um in 
 MostDslValidator.ApplicationVersionIsInvalid=Die Version der Anwendung muss dem Muster x.y.z entsprechen.
 MostDslValidator.CalculatedFieldNeedsOperand=Das Feld muss sich auf mindestens ein abgeleitetes Feld beziehen.
-MostDslValidator.DataObjectDoesNotNeedIdFields=Entferne ID-Felder... Du brauchst sie nicht ;-) außer vielleicht Du willst Composite Primary Keys erstellen (Datenobjekt: 
-MostDslValidator.DataObjectDoesNotNeedPrimaryKeyField=Du brauchst ein Feld nicht als primär zu markieren, dies wird automatisch erledigt - außer vielleicht Du willst Composite Primary Keys erstellen.
+MostDslValidator.DataObjectDoesNotNeedIdFields=Entferne ID-Felder... Du brauchst sie nicht ;-) 
+MostDslValidator.DataObjectDoesNotNeedPrimaryKeyField=Du brauchst ein Feld nicht als primär zu markieren, dies wird automatisch erledigt.
 MostDslValidator.DataObjectFieldsMustNotBeTooLarge=Die Länge aller Felder des Datenobjekts darf nicht größer als 21845 sein.
 MostDslValidator.DataObjectNameMustBeLonger=Der Name des Datenobjekts muss eine Länge von mindestens zwei Zeichen haben.
 MostDslValidator.DataObjectNameMustNotBeReserved=Der Name des Datenobjekts ist ein reservierter Bezeichner
@@ -65,7 +65,7 @@ MostDslValidator.EntityCategorisableMustNotContainReserved=Entitäten mit Kategor
 MostDslValidator.EntityCategorisableMustNotContainReservedField=Daher dürfen Deine Felder diesen Namen nicht enthalten.
 MostDslValidator.EntityCategorisableMustNotContainReservedSource=Daher darf Deine Referenz diesen Quell-Alias nicht enthalten.
 MostDslValidator.EntityCategorisableMustNotContainReservedTarget=Daher darf Deine Referenz diesen Ziel-Alias nicht enthalten.
-MostDslValidator.EntityCompositeHasWrongIdentifierStrategy=Composite-Entitäten können als Identifier-Strategie nur NONE haben.
+MostDslValidator.EntityCompositeIsDeprecated=Composite-Keys werden nicht mehr unterstützt.
 MostDslValidator.EntityDisplayPatternContainsNoField=Das Anzeigemuster enthält keine Feldreferenzen. Bitte prüfe, ob dies Absicht ist oder nicht.
 MostDslValidator.EntityFieldAbstractDateMustNotBePastAndFuture=Ein Wert kann nicht gleichzeitig in der Vergangenheit und in der Zukunft sein.
 MostDslValidator.EntityFieldAggregateNeedsLocking=Entitäten mit einem Aggregat-Feld sollten eine Locking-Strategie nutzen (optimistisches oder pessimistisches Lesen).
