added generator setting for authentication methods

--- a/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
@@ -153,6 +153,8 @@ _UI_SettingsContainer_generateKmlTemplates_feature = KML-Templates generieren
 _UI_SettingsContainer_generateKmlTemplates_description = Ob KML Templates generiert werden sollen oder nicht. Benötigt das geographical-Flag bei den entsprechenden Entitäten.
 _UI_SettingsContainer_generateIcsTemplates_feature = ICS-Templates generieren
 _UI_SettingsContainer_generateIcsTemplates_description = Ob ICS (iCalendar) Templates generiert werden sollen oder nicht. Benötigt Felder für Start- und Enddatum bei den entsprechenden Entitäten.
+_UI_SettingsContainer_authenticationMethod_feature = Authentifizierungsmethode
+_UI_SettingsContainer_authenticationMethod_description = Ob und welche Art von Authentifizierungsmethode bereitgestellt werden soll.
 _UI_SettingsContainer_generateOnlyBaseClasses_feature = Nur Basisklassen generieren
 _UI_SettingsContainer_generateOnlyBaseClasses_description = Ob nur Basisklassen generiert werden sollen. Kann nützlich sein zur Durchführung einfacher Aktualisierungen ohne strukturelle Änderungen.
 _UI_SettingsContainer_skipFiles_feature = Dateien überspringen
@@ -587,8 +589,9 @@ _UI_CoreVersion_ZK14DEV_literal = ZK14DEV
 _UI_ApplicationDependencyType_REQUIREMENT_literal = REQUIREMENT
 _UI_ApplicationDependencyType_RECOMMENDATION_literal = RECOMMENDATION
 _UI_ApplicationDependencyType_CONFLICT_literal = CONFLICT
-_UI_ModelLoadingType_CONSERVATIVE_literal = CONSERVATIVE
-_UI_ModelLoadingType_AGGRESSIVE_literal = AGGRESSIVE
+_UI_AuthMethodType_NONE_literal = NONE
+_UI_AuthMethodType_REMOTE_literal = REMOTE
+_UI_AuthMethodType_LOCAL_literal = LOCAL
 _UI_StringIsbnStyle_NONE_literal = NONE
 _UI_StringIsbnStyle_ISBN10_literal = ISBN10
 _UI_StringIsbnStyle_ISBN13_literal = ISBN13
